--- a/auth.html
+++ b/auth.html
@@ -23,9 +23,11 @@
         <input type="password" id="password" placeholder="🗝️" required autocomplete="new-password">
         <button id="login-button">&#10004;</button>
       </div>
-      <div style="margin-top: 10px;">
-        <!-- Button immer sichtbar! -->
-        <button id="members-button">Zum Mitgliederbereich</button>
+              
+      <hr size="1" noshade>
+      <div class="login-buttons">
+        <button id="members-button">⚙️ M.info bearbeiten</button>
+        <button id="login-button-2">🧭 Zur Eventseite</button>
       </div>
     </div>
   </div>
