--- a/texte/Mitglieder/index.html
+++ b/texte/Mitglieder/index.html
@@ -33,8 +33,8 @@
 
         <p id="editable-text">Lade Text...</p>
 
-        <button id="edit-button" style="display: none;"><u>Text bearbeiten</u> <img class="click-svg"></button>
-        <button id="logout-button" style="display: none;"><u>Logout</u> <img class="click-svg"></button>
+        <button id="edit-button" style="display: none;"><u>Text bearbeiten</u> <img class="click-svg" src="../../bilder/click-bright.png"></button>
+        <button id="logout-button" style="display: none;"><u>Logout</u> <img class="click-svg" src="../../bilder/click-bright.svg"></button>
       </div>
 
   </main>
