--- a/auth.html
+++ b/auth.html
@@ -5,32 +5,32 @@
   <meta name="author" content="Émile Jeremias Ruff">
   <link rel="icon" type="image/png" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="stylesheet.css?v=<?= filemtime('style.css'); ?>" type="text/css">
   <script src="script.js"></script>
 </head>
+
 <body>
+
   <div class="login" autocomplete="off">
     <h2>Login ADWFC</h2>
     <p class="login-text">Hier kannst du dich in den geschützten Mitgliederbereich des ADWFC einloggen 🔐</p>
+
     <br>
     <div class="login-eingabe">
-      <div>
-        <label for="username">Benutzername:</label>
-        <input type="text" id="username" placeholder="hier fancy shit eintragen" required>
-      </div>
-      <div class="login-pw">
-        <label for="password">Passwort:</label>
-        <input type="password" id="password" placeholder="🗝️" required autocomplete="new-password">
-        <button id="login-button">&#10004;</button>
-      </div>
+      <div> <label for="username">Benutzername:</label>
+            <input type="text" id="username" placeholder="hier fancy shit eintragen" required></div>
+
+      <div class="login-pw">  <label for="password">Passwort:</label>
+                              <input type="password" id="password" placeholder="🗝️" required autocomplete="new-password">
+                              <button id="login-button">&#10004;</button></div>
               
       <hr size="1" noshade>
-      <div class="login-buttons">
-        <button id="members-button">⚙️ M.info bearbeiten</button>
-        <button id="login-button-2">🧭 Zur Eventseite</button>
-      </div>
+      <div class="login-buttons"> <button id="members-button">⚙️ M.info bearbeiten</button>
+                                  <button id="login-button-2">🧭 Zur Eventseite</button></div>
     </div>
   </div>
+
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
@@ -50,43 +50,38 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // Funktion, um den Benutzer anzumelden und weiterzuleiten
     async function loginUserAndRedirect(username, password) {
       const emailAsUsername = username + "@example.com";
       try {
-        // Stelle sicher, dass das Login über eine Session läuft
-        await setPersistence(auth, browserSessionPersistence); // Session only
+        await setPersistence(auth, browserSessionPersistence); 
         const userCredential = await signInWithEmailAndPassword(auth, emailAsUsername, password);
 
-        // Wenn der Login erfolgreich ist, leite den Benutzer weiter
-        window.location.href = "texte/Mitglieder/index.html"; // Mitgliederbereich
+        window.location.href = "texte/Mitglieder/index.html"; 
       } catch (error) {
-        // Wenn Login fehlschlägt, zeige eine Fehlermeldung
-        alert("Fehler beim Login: " + error.message);
+        alert("LOL - Frage doch den mächtigen Guru (V) - Fehler beim Login: " + error.message);
       }
     }
 
-    // Wenn der "Login"-Button gedrückt wird, führe den Login aus
     document.getElementById("login-button").addEventListener("click", () => {
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
       if (username && password) {
         loginUserAndRedirect(username, password);
       } else {
-        alert("Bitte gib Benutzername und Passwort ein.");
+        alert("B.name + PW erforderlich");
       }
     });
 
-    // Wenn der "Mitgliederbereich"-Button gedrückt wird, leite weiter (dieser Button bleibt immer sichtbar)
     document.getElementById("members-button").addEventListener("click", () => {
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
       if (username && password) {
         loginUserAndRedirect(username, password);
       } else {
-        alert("Bitte gib Benutzername und Passwort ein.");
+        alert("B.name + PW erforderlich");
       }
     });
   </script>
+
 </body>
 </html>
