--- a/texte/Mitglieder/index.html
+++ b/texte/Mitglieder/index.html
@@ -25,7 +25,6 @@
 
       <div class="mitglieder">
         <h4>&#60; Mitgliederinfo bearbeiten &#62;</h4>
-        <!----><img class="kopf" src="../../bilder/Kopf.jpeg" alt="Kopf">
 
         <p>Folgend ist dein persönlicher Infotext zu bearbeiten. Dieser ist für <b>jeden</b> auf der Mitgliederseite <b>&#246;ffentlich einsehbar</b>. <br>
            Entsprechende Hinweise zur Zurückhaltung von sensiblen Informationen ergeben sich also von selbst.</p>          
@@ -33,11 +32,12 @@
 
         <p id="editable-text">Lade Text...</p>
 
-        <button id="edit-button" style="display: none;"><u>Text bearbeiten</u> <img class="click-svg" src=""></button>
-        <button id="logout-button" style="display: none;"><u>Logout</u> <img class="click-svg" src=""></button>
+        <button id="edit-button" style="display: none;"><u>Text bearbeiten</u> <img class="click-svg" src="../../bilder/click-bright.png" alt=""></button>
+        <button id="logout-button" style="display: none;"><u>Logout</u> <img class="click-svg" src="../../bilder/click-bright.svg" alt=""></button>
       </div>
 
   </main>
+
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
@@ -113,5 +113,6 @@
       }
     });
   </script>
+  
 </body>
 </html>
