--- a/texte/Mitglieder/index.html
+++ b/texte/Mitglieder/index.html
@@ -32,8 +32,8 @@
 
         <p id="editable-text">Lade Text...</p>
 
-        <button id="edit-button" style="display: none;"><u>Text bearbeiten</u> <img class="click-svg" src="../../bilder/click-bright.png" alt=""></button>
-        <button id="logout-button" style="display: none;"><u>Logout</u> <img class="click-svg" src="../../bilder/click-bright.svg" alt=""></button>
+        <button id="edit-button" style="display: none;"><u>Text bearbeiten</u> <img class="click-svg" src="" alt=""></button>
+        <button id="logout-button" style="display: none;"><u>Logout</u> <img class="click-svg" src="" alt=""></button>
       </div>
 
   </main>
