--- a/auth.html
+++ b/auth.html
@@ -56,7 +56,7 @@
         await setPersistence(auth, browserSessionPersistence); 
         const userCredential = await signInWithEmailAndPassword(auth, emailAsUsername, password);
 
-        window.location.href = "texte/Mitglieder/index.html"; 
+        window.location.href = "t/mitgliederinfo.html"; 
       } catch (error) {
         alert("LOL - Frage doch den mächtigen Guru (V) - Fehler beim Login: " + error.message);
       }
