--- a/t/mitglieder.html
+++ b/t/mitglieder.html
@@ -166,10 +166,8 @@
 
 
 
-
-<!--    <div class="m-legende">
-    <p onclick="toggleLegende(this)">Mitgliedertitel <img class="toggle-svg" src="../b/toggle-up.svg" alt=""></p>
-        <table id="legende-row" style="display: none; max-height: 150px;">
+    <p id="trigger">Mitgliedertitel <img id="toggle-img" src="../b/toggle-up.svg" alt="Bild"></p>
+        <table id="vs1" style="display: none; max-height: 150px;">
             <tr><td>M</td>
                 <td>= &nbsp; Mitglied</td></tr>
             <tr><td>VM</td>
@@ -198,7 +196,7 @@
             <tr><td>OtM</td>
                 <td>= &nbsp; One-time-Mitglied</td></tr>
         </table></p>
-    </div> -->
+    </div>
     </div>
 
         <br>
