--- a/sternenhimmel.html
+++ b/sternenhimmel.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Sternenhimmel Test</title>
+<title>Sternenhimmel 360° Drehung</title>
 <style>
   html, body {
     margin: 0; padding: 0; overflow: hidden; background: black; height: 100%;
@@ -21,17 +21,264 @@
   const canvas = document.getElementById('starCanvas');
   const ctx = canvas.getContext('2d');
 
-  let w, h, centerY;
+  let w, h;
   function resize() {
     w = window.innerWidth;
     h = window.innerHeight;
     canvas.width = w;
     canvas.height = h;
-    centerY = h / 2;
   }
   resize();
   window.addEventListener('resize', resize);
 
-  const wallLengthPx = 1600;
-  const starCount = 80;
-  
+  const starCount = 150;
+
+  const stars = [];
+  for(let i = 0; i < starCount; i++) {
+    stars.push({
+      angle: Math.random() * Math.PI * 2,
+      y: Math.random() * h,
+      radius: 2
+    });
+  }
+
+  const anchorAngle = 0;
+
+  let cameraAngle = 0;
+  let velocity = 0;
+  let isDragging = false;
+  let lastDragX = 0;
+
+  const fovDeg = 30; // Sichtfeld in Grad (hier anpassen)
+  const fov = fovDeg * Math.PI / 180;
+
+  function angleToScreenX(angleDiff) {
+    return (angleDiff + fov / 2) / fov * w;
+  }
+
+  function draw() {
+    ctx.clearRect(0, 0, w, h);
+    ctx.fillStyle = 'white';
+
+    stars.forEach(star => {
+      let diff = star.angle - cameraAngle;
+      if (diff > Math.PI) diff -= 2 * Math.PI;
+      if (diff < -Math.PI) diff += 2 * Math.PI;
+
+      if (diff > -fov/2 && diff < fov/2) {
+        const screenX = angleToScreenX(diff);
+        const screenY = star.y;
+
+        ctx.beginPath();
+        ctx.arc(screenX, screenY, star.radius, 0, Math.PI * 2);
+        ctx.fill();
+      }
+    });
+
+    let diffAnchor = anchorAngle - cameraAngle;
+    if (diffAnchor > Math.PI) diffAnchor -= 2 * Math.PI;
+    if (diffAnchor < -Math.PI) diffAnchor += 2 * Math.PI;
+
+    if (diffAnchor > -fov/2 && diffAnchor < fov/2) {
+      const anchorX = angleToScreenX(diffAnchor);
+      const anchorY = h / 2;
+      ctx.fillStyle = 'red';
+      ctx.beginPath();
+      ctx.arc(anchorX, anchorY, 5, 0, Math.PI * 2);
+      ctx.fill();
+    }
+  }
+
+  function animate() {
+    if (!isDragging) {
+      if (Math.abs(velocity) > 0.0001) {
+        cameraAngle -= velocity;
+        if (cameraAngle < 0) cameraAngle += 2 * Math.PI;
+        if (cameraAngle > 2 * Math.PI) cameraAngle -= 2 * Math.PI;
+        velocity *= 0.98;
+      } else {
+        velocity = 0;
+      }
+    }
+    draw();
+    requestAnimationFrame(animate);
+  }
+  animate();
+
+  function pointerDown(e) {
+    isDragging = true;
+    velocity = 0;
+    lastDragX = e.clientX || e.touches[0].clientX;
+  }
+  function pointerMove(e) {
+    if (!isDragging) return;
+    const currentX = e.clientX || e.touches[0].clientX;
+    const delta = currentX - lastDragX;
+    lastDragX = currentX;
+
+    const sensitivity = 0.001;
+    cameraAngle -= delta * sensitivity;
+    if (cameraAngle < 0) cameraAngle += 2 * Math.PI;
+    if (cameraAngle > 2 * Math.PI) cameraAngle -= 2 * Math.PI;
+
+    velocity = delta * sensitivity;
+  }
+  function pointerUp() {
+    isDragging = false;
+    velocity *= 0.8;
+  }
+
+  canvas.addEventListener('mousedown', pointerDown);
+  canvas.addEventListener('touchstart', pointerDown, {passive:false});
+  canvas.addEventListener('mousemove', pointerMove);
+  canvas.addEventListener('touchmove', pointerMove, {passive:false});
+  canvas.addEventListener('mouseup', pointerUp);
+  canvas.addEventListener('touchend', pointerUp);
+  canvas.addEventListener('touchcancel', pointerUp);
+})();
+</script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Sternenhimmel 360° Drehung</title>
+<style>
+  html, body {
+    margin: 0; padding: 0; overflow: hidden; background: black; height: 100%;
+  }
+  canvas {
+    display: block;
+    touch-action: none;
+  }
+</style>
+</head>
+<body>
+<canvas id="starCanvas"></canvas>
+<script>
+(() => {
+  const canvas = document.getElementById('starCanvas');
+  const ctx = canvas.getContext('2d');
+
+  let w, h;
+  function resize() {
+    w = window.innerWidth;
+    h = window.innerHeight;
+    canvas.width = w;
+    canvas.height = h;
+  }
+  resize();
+  window.addEventListener('resize', resize);
+
+  const starCount = 150;
+
+  const stars = [];
+  for(let i = 0; i < starCount; i++) {
+    stars.push({
+      angle: Math.random() * Math.PI * 2,
+      y: Math.random() * h,
+      radius: 2
+    });
+  }
+
+  const anchorAngle = 0;
+
+  let cameraAngle = 0;
+  let velocity = 0;
+  let isDragging = false;
+  let lastDragX = 0;
+
+  const fovDeg = 30; // Sichtfeld in Grad (hier anpassen)
+  const fov = fovDeg * Math.PI / 180;
+
+  function angleToScreenX(angleDiff) {
+    return (angleDiff + fov / 2) / fov * w;
+  }
+
+  function draw() {
+    ctx.clearRect(0, 0, w, h);
+    ctx.fillStyle = 'white';
+
+    stars.forEach(star => {
+      let diff = star.angle - cameraAngle;
+      if (diff > Math.PI) diff -= 2 * Math.PI;
+      if (diff < -Math.PI) diff += 2 * Math.PI;
+
+      if (diff > -fov/2 && diff < fov/2) {
+        const screenX = angleToScreenX(diff);
+        const screenY = star.y;
+
+        ctx.beginPath();
+        ctx.arc(screenX, screenY, star.radius, 0, Math.PI * 2);
+        ctx.fill();
+      }
+    });
+
+    let diffAnchor = anchorAngle - cameraAngle;
+    if (diffAnchor > Math.PI) diffAnchor -= 2 * Math.PI;
+    if (diffAnchor < -Math.PI) diffAnchor += 2 * Math.PI;
+
+    if (diffAnchor > -fov/2 && diffAnchor < fov/2) {
+      const anchorX = angleToScreenX(diffAnchor);
+      const anchorY = h / 2;
+      ctx.fillStyle = 'red';
+      ctx.beginPath();
+      ctx.arc(anchorX, anchorY, 5, 0, Math.PI * 2);
+      ctx.fill();
+    }
+  }
+
+  function animate() {
+    if (!isDragging) {
+      if (Math.abs(velocity) > 0.0001) {
+        cameraAngle -= velocity;
+        if (cameraAngle < 0) cameraAngle += 2 * Math.PI;
+        if (cameraAngle > 2 * Math.PI) cameraAngle -= 2 * Math.PI;
+        velocity *= 0.98;
+      } else {
+        velocity = 0;
+      }
+    }
+    draw();
+    requestAnimationFrame(animate);
+  }
+  animate();
+
+  function pointerDown(e) {
+    isDragging = true;
+    velocity = 0;
+    lastDragX = e.clientX || e.touches[0].clientX;
+  }
+  function pointerMove(e) {
+    if (!isDragging) return;
+    const currentX = e.clientX || e.touches[0].clientX;
+    const delta = currentX - lastDragX;
+    lastDragX = currentX;
+
+    const sensitivity = 0.001;
+    cameraAngle -= delta * sensitivity;
+    if (cameraAngle < 0) cameraAngle += 2 * Math.PI;
+    if (cameraAngle > 2 * Math.PI) cameraAngle -= 2 * Math.PI;
+
+    velocity = delta * sensitivity;
+  }
+  function pointerUp() {
+    isDragging = false;
+    velocity *= 0.8;
+  }
+
+  canvas.addEventListener('mousedown', pointerDown);
+  canvas.addEventListener('touchstart', pointerDown, {passive:false});
+  canvas.addEventListener('mousemove', pointerMove);
+  canvas.addEventListener('touchmove', pointerMove, {passive:false});
+  canvas.addEventListener('mouseup', pointerUp);
+  canvas.addEventListener('touchend', pointerUp);
+  canvas.addEventListener('touchcancel', pointerUp);
+})();
+</script>
+
+</body>
+</html>
