--- a/sternenhimmel.html
+++ b/sternenhimmel.html
@@ -31,26 +31,26 @@
   resize();
   window.addEventListener('resize', resize);
 
-  const starCount = 150;
-  const bgStarCount = 150;
+  const starCount = 200;
 
   const stars = [];
-  const bgStars = [];
-
   for(let i = 0; i < starCount; i++) {
     stars.push({
       angle: Math.random() * Math.PI * 2,
       y: Math.random() * h,
-      radius: 2
+      radius: 1.5 + Math.random() * 0.5,
+      alpha: 0.5 + Math.random() * 0.2
     });
   }
 
+  const bgStarCount = 50;
+  const bgStars = [];
   for(let i = 0; i < bgStarCount; i++) {
     bgStars.push({
       angle: Math.random() * Math.PI * 2,
       y: Math.random() * h,
       radius: 0.7 + Math.random() * 0.5,
-      alpha: 0.6 + Math.random() * 0.25
+      alpha: 0.25 + Math.random() * 0.15
     });
   }
 
@@ -61,51 +61,40 @@
   let isDragging = false;
   let lastDragX = 0;
 
-  const fovDeg = 30;
+  const fovDeg = 90;
   const fov = fovDeg * Math.PI / 180;
+
+  const baseSensitivity = 0.001;
+  const sensitivity = baseSensitivity * (fovDeg / 30);
 
   function angleToScreenX(angleDiff) {
     return (angleDiff + fov / 2) / fov * w;
   }
 
+  function drawStars(starArray) {
+    starArray.forEach(star => {
+      let diff = star.angle - cameraAngle;
+      if (diff > Math.PI) diff -= 2 * Math.PI;
+      if (diff < -Math.PI) diff += 2 * Math.PI;
+
+      if (diff > -fov/2 && diff < fov/2) {
+        const screenX = angleToScreenX(diff);
+        const screenY = star.y;
+
+        ctx.fillStyle = `rgba(255, 255, 255, ${star.alpha})`;
+        ctx.beginPath();
+        ctx.arc(screenX, screenY, star.radius, 0, Math.PI * 2);
+        ctx.fill();
+      }
+    });
+  }
+
   function draw() {
     ctx.clearRect(0, 0, w, h);
 
-    // Hintergrundsterne
-    bgStars.forEach(star => {
-      let diff = star.angle - cameraAngle;
-      if (diff > Math.PI) diff -= 2 * Math.PI;
-      if (diff < -Math.PI) diff += 2 * Math.PI;
+    drawStars(bgStars);
+    drawStars(stars);
 
-      if (diff > -fov/2 && diff < fov/2) {
-        const screenX = angleToScreenX(diff);
-        const screenY = star.y;
-
-        ctx.fillStyle = `rgba(255,255,255,${star.alpha})`;
-        ctx.beginPath();
-        ctx.arc(screenX, screenY, star.radius, 0, Math.PI * 2);
-        ctx.fill();
-      }
-    });
-
-    // Hauptsterne
-    ctx.fillStyle = 'white';
-    stars.forEach(star => {
-      let diff = star.angle - cameraAngle;
-      if (diff > Math.PI) diff -= 2 * Math.PI;
-      if (diff < -Math.PI) diff += 2 * Math.PI;
-
-      if (diff > -fov/2 && diff < fov/2) {
-        const screenX = angleToScreenX(diff);
-        const screenY = star.y;
-
-        ctx.beginPath();
-        ctx.arc(screenX, screenY, star.radius, 0, Math.PI * 2);
-        ctx.fill();
-      }
-    });
-
-    // Ankerpunkt
     let diffAnchor = anchorAngle - cameraAngle;
     if (diffAnchor > Math.PI) diffAnchor -= 2 * Math.PI;
     if (diffAnchor < -Math.PI) diffAnchor += 2 * Math.PI;
@@ -147,7 +136,6 @@
     const delta = currentX - lastDragX;
     lastDragX = currentX;
 
-    const sensitivity = 0.001;
     cameraAngle -= delta * sensitivity;
     if (cameraAngle < 0) cameraAngle += 2 * Math.PI;
     if (cameraAngle > 2 * Math.PI) cameraAngle -= 2 * Math.PI;
@@ -164,10 +152,11 @@
   canvas.addEventListener('mousemove', pointerMove);
   canvas.addEventListener('touchmove', pointerMove, {passive:false});
   canvas.addEventListener('mouseup', pointerUp);
+
   canvas.addEventListener('touchend', pointerUp);
   canvas.addEventListener('touchcancel', pointerUp);
-
 })();
 </script>
+  
 </body>
 </html>
